--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,8 +7,9 @@
 <script type="text/javascript" charset="utf-8">
 $(function () {
   $(".js-next").on("click", function() {
+    event.preventDefault() //added this line
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
-    $.get("/products/" + nextId + "/data", function(data) {
+    $.get("/products/" + nextId + ".json", function(data) { //changed to ".json"
       $(".productName").text(data["name"]);
       $(".productPrice").text(data["price"]);
       $(".productDescription").text(data["description"]);
@@ -19,4 +20,3 @@ $(function () {
   });
 });
 </script>
-
